[package]
name = "oxpen"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive", "env", "color"] }
image = { version = "0.24.5", features = ["avif-decoder", "libwebp"] }
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
terminal_size = "0.2.3"

[profile.dev.package."*"]
opt-level = 3
